# planning-reception-avatar

./: .gitignore  BUILD_GUIDE.md  CLAUDE.md  README.md  SYSTEM_ARCHITECTURE.md  TODO.md  USAGE.md  build.py  front.spec  front_pc.py  pyproject.toml  remote.spec  remote_pc.py
assets/: icon.icns
docs/: INFRA.md
src/: __init__.py  config.py
src/front/: __init__.py  communication_server.py  flet_gui.py  main.py  meet_participant.py  reception_handler.py
src/front-pc/: google_meet_auto_join.py  socket_server.py
src/models/: __init__.py  enums.py  schemas.py
src/remote/: __init__.py  communication_client.py  flet_gui.py  main.py  meet_manager.py  poc.py  prechecks.py  reception_controller.py  webdriver_manager.py
src/remote-pc/: google_meet_auto_host.py  socket_client.py  test_communication.py  test_google_meet.py
src/utils/: platform_utils.py  slack.py  tailscale_utils.py  vtube_studio_utils.py
